[A11y] fix contrast for default success color (#5143)
* [A11y] fix contrast for default success color

* change success color in settings as well

--- a/src/pretix/static/pretixbase/scss/_bootstrap_vars.scss
+++ b/src/pretix/static/pretixbase/scss/_bootstrap_vars.scss
@@ -123,7 +123,7 @@ $label-danger-bg: var(--pretix-brand-danger);
 $label-danger-bg-hover: var(--pretix-brand-danger-darken-10);
 
 $alert-success-bg: var(--pretix-brand-success-tint-85);
-$alert-success-text: var(--pretix-brand-success-shade-42);
+$alert-success-text: var(--pretix-brand-success-shade-25);
 $alert-success-border: var(--pretix-brand-success);
 $alert-success-hr: var(--pretix-brand-success-darken-5);
 $alert-success-link: var(--pretix-brand-success-shade-42);
